--- a/package.json
+++ b/package.json
@@ -243,6 +243,7 @@
     "connected-react-router": "^6.6.1",
     "core-js": "^3.5.0",
     "devtron": "^1.4.0",
+    "dotenv": "^8.2.0",
     "electron-debug": "^3.0.1",
     "electron-log": "^4.0.0",
     "electron-updater": "^4.2.0",
