--- a/package.json
+++ b/package.json
@@ -268,8 +268,6 @@
   },
   "browserslist": "electron 1.6",
   "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "hooks": {}
   }
 }
